# cuppa

./: .gitignore  .gitmodules  README.md
client/: README.md  model_accelerometer.py  requirements_serial.txt  serial_comms.py  visualize_cov_ellipse.py  visualize_sensor_data.py  visualize_state_data.py  visualize_state_data_circle.py
firmware/: CMakeLists.txt  README.md  julier_jewel_custom.cpp
firmware/include/: button.hpp  charlieplex.hpp  comms.hpp  constants.hpp  driver_mpu6500_interface.h  estimator.hpp  flip.hpp  fluid_sim.hpp  imu.hpp  imu_icm20948.hpp  imu_mpu6500.hpp  magnetometer.hpp  timer.hpp  types.hpp  ukf.hpp  utils.hpp
firmware/src/: button.cpp  charlieplex.cpp  comms.cpp  driver_mpu6500_interface.c  estimator.cpp  flip.cpp  fluid_sim.cpp  imu_icm20948.cpp  imu_mpu6500.cpp  magnetometer.cpp  timer.cpp  ukf.cpp  utils.cpp
firmware/tests/: CMakeLists.txt  test_fluid_sim.cpp  test_ukf.cpp
